force-app/main/default/objects/Lead/fields/Account_status_when_converted__c.field-meta.xml
<CustomField>
    <fullName>Account_status_when_converted__c</fullName>
    <formula>&apos;Prospect&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account status when converted</label>
    <type>Text</type>
</CustomField>