force-app/main/default/objects/Lead/fields/Agreed_Callback__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Callback__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will be checked if a Call back has been agreed</description>
    <label>Agreed Callback</label>
    <type>Checkbox</type>
</CustomField>