force-app/main/default/objects/Lead/fields/Billing_Door_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Door_Number__c</fullName>
    <label>Billing Door Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>