force-app/main/default/objects/Lead/fields/Billing_Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street_Number__c</fullName>
    <label>Billing Street Number</label>
    <length>5</length>
    <type>Text</type>
</CustomField>