force-app/main/default/objects/Lead/fields/Billing_Street_Number_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street_Number_Suffix__c</fullName>
    <label>Billing Street Number Suffix</label>
    <length>2</length>
    <type>Text</type>
</CustomField>