force-app/main/default/objects/Lead/fields/Callback_Comments__c.field-meta.xml
<CustomField>
    <fullName>Callback_Comments__c</fullName>
    <label>Callback Comments</label>
    <length>150</length>
    <type>Text</type>
</CustomField>