force-app/main/default/objects/Lead/fields/Callback_date__c.field-meta.xml
<CustomField>
    <fullName>Callback_date__c</fullName>
    <label>Callback date</label>
    <type>DateTime</type>
</CustomField>