force-app/main/default/objects/Lead/fields/Callback_time__c.field-meta.xml
<CustomField>
    <fullName>Callback_time__c</fullName>
    <label>Callback time</label>
    <type>Time</type>
</CustomField>