force-app/main/default/objects/Lead/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>Date the Lead was set to Qualified or Unqualified. Used by SalesPlayManagementGetAccountsAction to filter Accounts for Sales Play Lead creation.</description>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>