force-app/main/default/objects/Lead/fields/Closed_Won_information__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_information__c</fullName>
    <label>Closed Won information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Information email sent</fullName>
            </value>
            <value>
                <fullName>Meeting booked</fullName>
            </value>
            <value>
                <fullName>Offer sent</fullName>
            </value>
            <value>
                <fullName>Opportunity created - other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>