force-app/main/default/objects/Lead/fields/Consent_given_via__c.field-meta.xml
<CustomField>
    <fullName>Consent_given_via__c</fullName>
    <description>Field to store the channel that customer gave the consent to digital marketing.</description>
    <label>Consent given via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Customer Meeting</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>