force-app/main/default/objects/Lead/fields/CVR__c.field-meta.xml
<CustomField>
    <fullName>CVR__c</fullName>
    <description>An 8 digit unique code used to identify a company</description>
    <externalId>true</externalId>
    <label>CVR</label>
    <length>8</length>
    <type>Text</type>
</CustomField>