force-app/main/default/objects/Lead/fields/CVR_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>CVR_Company_Code__c</fullName>
    <label>CVR Company Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>