force-app/main/default/objects/Lead/fields/CVR_Long_Description__c.field-meta.xml
<CustomField>
    <fullName>CVR_Long_Description__c</fullName>
    <label>CVR Long Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>