force-app/main/default/objects/Lead/fields/CVR_Refresh_Date__c.field-meta.xml
<CustomField>
    <fullName>CVR_Refresh_Date__c</fullName>
    <description>The date the Lead was refreshed with data from the CVR register</description>
    <inlineHelpText>The date the Lead was refreshed with data from the CVR register</inlineHelpText>
    <label>CVR Refresh Date</label>
    <type>Date</type>
</CustomField>