force-app/main/default/objects/Lead/fields/CVR_Status__c.field-meta.xml
<CustomField>
    <fullName>CVR_Status__c</fullName>
    <description>Shows the Status from the VIRK data</description>
    <inlineHelpText>Shows the Status from the VIRK data</inlineHelpText>
    <label>CVR Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>