force-app/main/default/objects/Lead/fields/Digital_Marketing_Consent__c.field-meta.xml
<CustomField>
    <fullName>Digital_Marketing_Consent__c</fullName>
    <description>Field to track Digital Marketing Consent</description>
    <label>Digital Marketing Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Given</fullName>
            </value>
            <value>
                <fullName>Given</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>