force-app/main/default/objects/Lead/fields/Employee_Number_Range__c.field-meta.xml
<CustomField>
    <fullName>Employee_Number_Range__c</fullName>
    <description>The range of employees, the value will come from CompanyAPI as 999-9999</description>
    <label>Employee Number Range</label>
    <length>50</length>
    <type>Text</type>
</CustomField>