force-app/main/default/objects/Lead/fields/Marketing_Opt_Out_CVR__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Opt_Out_CVR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this box is checked the lead is marked as protected against marketing in the CVR register</description>
    <inlineHelpText>If this box is checked the lead is marked as protected against marketing in the CVR register</inlineHelpText>
    <label>Marketing Opt Out (CVR)</label>
    <type>Checkbox</type>
</CustomField>