force-app/main/default/objects/Lead/fields/Nace_Code__c.field-meta.xml
<CustomField>
    <fullName>Nace_Code__c</fullName>
    <description>The code for the type of business the lead is operating within</description>
    <inlineHelpText>The code for the type of business the lead is operating within</inlineHelpText>
    <label>Nace Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>