force-app/main/default/objects/Lead/fields/Nace_Description__c.field-meta.xml
<CustomField>
    <fullName>Nace_Description__c</fullName>
    <description>The description of the business the lead is operating within</description>
    <inlineHelpText>The description of the business the lead is operating within</inlineHelpText>
    <label>Nace Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>