force-app/main/default/objects/Lead/fields/On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reason__c</fullName>
    <label>On Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wrong phone number</fullName>
            </value>
            <value>
                <fullName>No response</fullName>
            </value>
            <value>
                <fullName>Call back at another time</fullName>
            </value>
            <value>
                <fullName>Contact person not available</fullName>
            </value>
            <value>
                <fullName>No response - other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>