force-app/main/default/objects/Lead/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <description>Needs to have the exact same values with the ProductGroup picklist on the Account so that the Converting Lead to Account can setup the ProductGroup on the account</description>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UC</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>FireWall</fullName>
            </value>
            <value>
                <fullName>Hosting</fullName>
            </value>
            <value>
                <fullName>IoT</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>SMS manager</fullName>
            </value>
            <value>
                <fullName>Telia Home Office</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>