force-app/main/default/objects/Lead/fields/Rationale__c.field-meta.xml
<CustomField>
    <fullName>Rationale__c</fullName>
    <inlineHelpText>Describe why this lead is needed even though it does not have a CVR number. Please provide P-number or SE number if available</inlineHelpText>
    <label>Rationale</label>
    <type>TextArea</type>
</CustomField>