force-app/main/default/objects/Lead/fields/Sales_Note_3__c.field-meta.xml
<CustomField>
    <fullName>Sales_Note_3__c</fullName>
    <label>Sales Note 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>