force-app/main/default/objects/Lead/fields/Sales_Play__c.field-meta.xml
<CustomField>
    <fullName>Sales_Play__c</fullName>
    <formula>IF(RecordType.DeveloperName = &apos;Sales_Play&apos;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Play Record Type</label>
    <type>Checkbox</type>
</CustomField>