force-app/main/default/objects/Lead/fields/Sales_Play_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Play_Campaign_Name__c</fullName>
    <description>Populated by &apos;SalesPlayLeadCreator&apos; when using the &apos;Sales Play - Management&apos; flow</description>
    <label>Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>