force-app/main/default/objects/Lead/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>Segment for the lead</description>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Segment</fullName>
            </value>
            <value>
                <fullName>SoHo Account</fullName>
            </value>
            <value>
                <fullName>Business Account</fullName>
            </value>
            <value>
                <fullName>Managed Account</fullName>
            </value>
            <value>
                <fullName>Large Account</fullName>
            </value>
            <value>
                <fullName>Key Acount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>