force-app/main/default/objects/Lead/fields/Unqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Reason__c</fullName>
    <description>Field used for entering an Unqualified Reason, Used in Validation Rule</description>
    <inlineHelpText>If a Lead is Unqualified you are required to enter a reason</inlineHelpText>
    <label>Unqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Time – Timing</fullName>
            </value>
            <value>
                <fullName>No need</fullName>
            </value>
            <value>
                <fullName>Missing product</fullName>
            </value>
            <value>
                <fullName>In binding with another provider</fullName>
            </value>
            <value>
                <fullName>Bad experience with Telia</fullName>
            </value>
            <value>
                <fullName>No interest - other</fullName>
            </value>
            <value>
                <fullName>Poor lead quality</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
            <value>
                <fullName>Bad experience with Norlys</fullName>
                <isActive>false</isActive>
                <label>Bad experience with Norlys</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>