force-app/main/default/objects/Lead/recordTypes/Sales_Play.recordType-meta.xml
<RecordType>
    <fullName>Sales_Play</fullName>
    <active>true</active>
    <businessProcess>SalesPlay</businessProcess>
    <description>Used only for Sales Play Campaigns</description>
    <label>Sales Play</label>
</RecordType>