force-app/main/default/objects/Lead/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <businessProcess>Master</businessProcess>
    <description>Used for Standard Lead creation</description>
    <label>Standard</label>
</RecordType>