force-app/main/default/objects/Lead/validationRules/On_hold_Lead_need_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>On_hold_Lead_need_reason</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status, &quot;On_Hold&quot;) &amp;&amp; ISBLANK(Text(  On_Hold_Reason__c  ))</errorConditionFormula>
    <errorMessage>When putting a Lead On Hold, please add a reason.</errorMessage>
</ValidationRule>