force-app/main/default/objects/Lead/validationRules/Unqualified_Leads_need_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Unqualified_Leads_need_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status, &quot;Unqualified&quot;) &amp;&amp; ISBLANK(Text(  Unqualified_Reason__c  ))</errorConditionFormula>
    <errorDisplayField>Unqualified_Reason__c</errorDisplayField>
    <errorMessage>You need to fill out a Reason if the Lead is Unqualified</errorMessage>
</ValidationRule>