force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>CVR__c</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Sales_Play_Campaign_Name__c</columns>
    <columns>Sales_Note_1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Play_Campaign_Name__c</field>
        <operation>contains</operation>
        <value>internet</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>All Open Leads</label>
</ListView>