force-app/main/default/objects/Lead/listViews/SoHo_Lead_Lead.listView-meta.xml
<ListView>
    <fullName>SoHo_Lead_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Unqualified,Qualified</value>
    </filters>
    <label>SoHo Lead</label>
    <queue>SoHo_Lead</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>